# ynterx_api

./: .dockerignore  .editorconfig  .env.example  .gitignore  CORRECCIONES_CONTRATOS.md  DEPLOYMENT_GUIDE_QA.md  Dockerfile  FLUTTER_INTEGRATION_GUIDE.md  GOOGLE_DRIVE_URLS_IMPLEMENTATION.md  INFORME_ESTRUCTURA_PROYECTO.md  INSTRUCCIONES_FECHAS_TEMPLATE.md  INSTRUCCIONES_TEMPLATE_WORD.md  INTEGRATION_WITH_EXISTING_SERVICE.md  MAILTRAP_SETUP.md  README.md  REFACTORING_SUMMARY.md  RESUMEN_MAILTRAP.md  check_referrer_functions.sql  check_sp_create_referrer.sql  debug_endpoint.py  debug_json_issue.py  deploy-qa.sh  example_contract_query.py  get_contract_complete_info.sql  json_corregido.json  pyproject.toml  requirements.txt  test_auto_payment_with_receipt.py  test_complete_mock.py  test_endpoint_validation.py  test_payment_endpoints.py  test_payment_images.py  test_payment_upload.py  test_receipt_service.py  test_register_payment.py  test_simple.py  test_simple_mock.py  vercel.json
.git_old/: AUTO_MERGE  COMMIT_EDITMSG  FETCH_HEAD  HEAD  MERGE_HEAD  MERGE_MSG  MERGE_MSG.save  ORIG_HEAD  config  index
app/: api.py  cli.py  config.py  constants.py  database.py  dev_token.json  email.py  enums.py  exceptions.py  main.py  schemas.py  session_cache.py  start_ynterx_api.sh
config/: ecosystem.config.js
documentacion_entrega/: README.md
scripts/: CLEAN_CONTRACTS_README.md  README_DB_CLEANUP.md  clean_contracts_database.py  clean_database.py  clean_database_auto.py  clean_db.sh
tests/: README.md  json_definitivo.json  test_casado_json.json  test_casados_json.json  (+10 more)
(+286 files in other folders)
